# ranger-twin

./: .env.backup.1766979285  .env.example  .gcloudignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE-DESKTOP-INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  PROGRESS.md  README-DRAFT.md  README-OLD.md  README.md  SECURITY.md  docker-compose.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  reorganize-diagrams.sh  requirements.txt
.agent/workflows/: browser-automation.md
.claude/: warmup-phase1.md
.claude/agents/: api-validator.md  browser-tester.md  report-writer.md
.context/: CLAUDE.md  GARDENING.md  MANIFEST.md  README.md  architecture.md
agents/: .vertex_rag_config.json  README.md
agents/_shared/: AUDIT_BRIDGE_DELIVERY.md  README.md  __init__.py  callbacks.py  config.py  fire_utils.py  rag_client.py  validation.py
agents/burn-analyst/: __init__.py  agent.py  config.yaml
agents/burn_analyst/: .env.example  agent.py  burn_rag_query.py  rag_query.py
agents/coordinator/: .env.example  __init__.py  agent.py  config.yaml  implementation.py
agents/cruising-assistant/: __init__.py  agent.py
agents/cruising_assistant/: .env.example  __init__.py  agent.py  config.yaml  rag_query.py  timber_rag_query.py
agents/data_recon/: __init__.py  agent.py
agents/docs/: README.md
agents/nepa-advisor/: __init__.py  agent.py  config.yaml
agents/nepa_advisor/: .env.example  agent.py  file_search.py
agents/shared/: AUDIT_BRIDGE_DELIVERY.md  README.md  audit_bridge.py  callbacks.py  mcp_client.py  validation.py
agents/trail-assessor/: __init__.py  agent.py
agents/trail_assessor/: agent.py  config.yaml  rag_query.py
agents/validation_spike/: __init__.py  agent.py
apps/command-console/: .dockerignore  .env.example  .env.production  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  cloudbuild.yaml  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
apps/field-companion/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
data/: README.md
data/documents/: README.md
data/layers/: README.md
data/rasters/: README.md
docs/: DATA-SIMULATION-STRATEGY.md  DEMO-DATA-REFERENCE.md  GLOSSARY.md  INTEGRATION-ROADMAP.md  NEXT-SESSION.md  PHASED-BUILD-PLAN.md  PRODUCT-SUMMARY-COMPACT.md  PROJECT-BRIEF.md  PROMPT-ENGINEERING-RUNBOOK.md  QA-VALIDATION-MANUAL.md  RANGER-DEMO-MANIFESTO.md  README.md  SPRINT-FOCUS.md  STRATEGIC-REFRAME.md  STRATEGIC-ROADMAP.md  VALIDATION-TEST-PLAN.md  _!_HANDOFF-TO-CLAUDE.md  _!_HOW-RANGER-WORKS.md  _!_IMPLEMENTATION-ROADMAP.md  _!_PRODUCT-SUMMARY.md
infrastructure/: ANTI-GRAVITY-INSTRUCTIONS-v2.md  NAMING-CONVENTIONS.md  README.md
knowledge/: .gitignore  README.md  manifest.yaml
mcp/: README.md
results/: stress_test_20251230_094701.json  stress_test_20251230_095958.json  stress_test_20251230_101056.json
scripts/: README.md  agent_stress_test.py  deploy-cloud-run.sh  deploy-frontend.sh  enable_rag.py  hygiene-cleanup.sh  process-mtbs-cog.sh  replay-coordinator.json  requirements-testing.txt  setup-geospatial-bucket.sh  test-frontend-local.sh  test-integration.py  test_mcp_fixtures.py  validate_fixtures.py  verify-adk-fixed.py  verify-adk.py  verify-environment.sh  verify_tool_invocation.py
services/: README.md
services/agents/burn-analyst/: .env.example  README.md  pyproject.toml
services/agents/burn-analyst/app/: __init__.py  agent.py  main.py
services/agents/burn-analyst/tests/: __init__.py  conftest.py  test_main.py
services/agents/cruising-assistant/: .env.example  README.md  pyproject.toml
services/agents/cruising-assistant/app/: __init__.py  agent.py  main.py
services/agents/cruising-assistant/tests/: __init__.py  conftest.py  test_main.py
services/agents/nepa-advisor/: .nepa_store_config.json  README.md  pyproject.toml
services/agents/nepa-advisor/app/: __init__.py  agent.py  main.py  tools.py
services/agents/nepa-advisor/scripts/: download_documents.py  setup_file_search.py
services/api-gateway/: README.md  pyproject.toml
services/api-gateway/app/: __init__.py  main.py
services/api-gateway/app/routers/: __init__.py  briefings.py  chat.py  health.py
services/api-gateway/app/services/: __init__.py  briefing_manager.py  redis_client.py
services/api-gateway/tests/: test_chat.py
skills/: README.md
tests/: Complete Testing Guide.md  STRESS-TEST-REPORT.md  __init__.py  geospatial-validation.md  phase7-validation-report.md  proof-layer.md  results.md  stress_test_matrix.yaml
(+728 files in other folders)
