[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ranger-api-gateway"
version = "0.1.0"
description = "RANGER API Gateway - FastAPI main router with WebSocket support"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "RANGER Team", email = "ranger@example.com" }
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ranger-agent-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
