[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ranger-cruising-assistant"
version = "0.1.0"
description = "RANGER Cruising Assistant Agent - Timber inventory and species identification"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "redis>=5.0.0",
    "pydantic>=2.0.0",
    "ranger-agent-common",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
